--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "backend taller gitABM",
   "main": "index.js",
   "scripts": {
-    "test": "testtaller"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -13,6 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
+    "mysql2": "^3.2.3",
+    "promise-mysql": "^5.2.0"
   }
 }
