--- a/frontend/tallerGitABM/package.json
+++ b/frontend/tallerGitABM/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
+    "css-loader": "^6.10.0",
+    "style-loader": "^3.3.4",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
